# finrisk-ai-copilot

./: .gitignore  CURRENT_STATUS.md  DEMO_STATUS.md  LICENSE  Makefile  README.md
apps/case-service/: pom.xml
apps/case-service/src/main/java/com/finrisk/ai/caseservice/: CaseServiceApplication.java
apps/case-service/src/main/java/com/finrisk/ai/caseservice/config/: ApplicationConfig.java
apps/case-service/src/main/java/com/finrisk/ai/caseservice/controller/: CaseController.java
apps/case-service/src/main/java/com/finrisk/ai/caseservice/domain/: Case.java  CaseStatus.java  CaseType.java  Priority.java
apps/case-service/src/main/java/com/finrisk/ai/caseservice/repository/: CaseRepository.java
apps/case-service/src/main/java/com/finrisk/ai/caseservice/service/: CaseEventService.java  CaseNumberGeneratorService.java  CaseService.java
apps/case-service/src/main/resources/: application.yml
apps/copilot-orchestrator/: pyproject.toml
apps/copilot-orchestrator/app/: main.py
apps/copilot-orchestrator/app/services/: agent_orchestrator.py  tool_registry.py
apps/entity-service/: pyproject.toml
apps/entity-service/app/: main.py
apps/entity-service/app/services/: entity_resolution.py
apps/gateway-bff/: .env.local  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/gateway-bff/.next/: trace
apps/gateway-bff/.next/cache/webpack/client-development/: index.pack.gz.old
apps/gateway-bff/.next/cache/webpack/server-development/: index.pack.gz.old
apps/gateway-bff/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
apps/gateway-bff/.next/server/app/: page.js  page_client-reference-manifest.js
apps/gateway-bff/.next/server/app/api/graphql/: route.js
apps/gateway-bff/.next/server/vendor-chunks/: @as-integrations.js  @babel.js  @protobufjs.js  @radix-ui.js  @tanstack.js  @wry.js  async-retry.js  available-typed-arrays.js  call-bind-apply-helpers.js  call-bind.js  call-bound.js  class-variance-authority.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  define-data-property.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  eventemitter3.js  fast-equals.js  for-each.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  graphql-scalars.js  graphql-tag.js  graphql.js  has-property-descriptors.js  has-symbols.js  (+43 more)
apps/gateway-bff/.next/static/chunks/: _app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsComponent_EDEL3XIZ_js.js  _app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsPanelComponent_RN252AT2_js.js  app-pages-internals.js  webpack.js
apps/gateway-bff/.next/static/chunks/app/: layout.js
apps/gateway-bff/.next/static/css/app/: layout.css
apps/gateway-bff/.next/static/development/: _buildManifest.js
apps/gateway-bff/.next/static/webpack/: webpack.18b6ec8b4bf3907f.hot-update.js
apps/gateway-bff/.next/static/webpack/app/: layout.18b6ec8b4bf3907f.hot-update.js
apps/gateway-bff/.next/types/app/: layout.ts  page.ts
apps/gateway-bff/.next/types/app/api/graphql/: route.ts
apps/gateway-bff/src/app/: globals.css  layout.tsx  page.tsx
apps/gateway-bff/src/app/api/graphql/: route.ts
apps/gateway-bff/src/components/actions/: quick-actions.tsx
apps/gateway-bff/src/components/activity/: recent-activity.tsx
apps/gateway-bff/src/components/ai/: ai-insights.tsx
apps/gateway-bff/src/components/analytics/: risk-metrics.tsx
apps/gateway-bff/src/components/cases/: case-overview.tsx
apps/gateway-bff/src/components/layout/: app-layout.tsx  header.tsx  sidebar.tsx
apps/gateway-bff/src/components/search/: quick-search-modal.tsx
apps/gateway-bff/src/components/ui/: dashboard-skeleton.tsx  dashboard.tsx  toast.tsx
apps/gateway-bff/src/graphql/: context.ts  plugins.ts
apps/gateway-bff/src/graphql/queries/: dashboard.ts
apps/gateway-bff/src/graphql/resolvers/: index.ts
apps/gateway-bff/src/graphql/schema/: case.graphql.ts  index.ts
apps/gateway-bff/src/lib/: apollo-wrapper.tsx  error-formatting.ts  utils.ts
apps/gateway-bff/src/pages/api/: graphql.ts
apps/gateway-bff/src/providers/: auth-provider.tsx  query-provider.tsx  theme-provider.tsx  toast-provider.tsx
apps/ingestion-service/: pyproject.toml
apps/ingestion-service/app/: main.py
apps/ingestion-service/app/api/v1/: ingestion.py
apps/ingestion-service/app/core/: config.py
apps/ingestion-service/app/models/: ingestion.py
apps/ml-scoring/: pyproject.toml
apps/ml-scoring/app/: main.py
apps/ml-scoring/app/models/: scoring.py
apps/rules-service/: pyproject.toml
apps/rules-service/app/: main.py
apps/rules-service/app/services/: opa_service.py
apps/search-service/: pyproject.toml
apps/search-service/app/: main.py
apps/search-service/app/api/v1/: search.py
apps/search-service/app/core/: opensearch.py
apps/search-service/app/services/: hybrid_search.py
docs/: ARCHITECTURE.md  QUICKSTART.md
infra/docker-compose/: docker-compose-minimal.yml  docker-compose.yml  env.example
infra/docker-compose/clickhouse-config/: custom.xml
infra/docker-compose/init-scripts/: 01-init-databases.sql
infra/k8s/helm/finrisk/: Chart.yaml  values.yaml
infra/k8s/helm/finrisk/templates/: case-service.yaml
infra/terraform/aws/: main.tf  variables.tf
scripts/: run-ui-demo.sh  validate-setup.sh
